--- a/tooplate-style.css
+++ b/tooplate-style.css
@@ -207,7 +207,7 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #home {
-  background: url('../images/home-bg1.jpg') 50% 0 repeat-y fixed;
+  background: url('home-bg1.jpg') 50% 0 repeat-y fixed;
   background-size: cover;
   background-position: center center;
   display: -webkit-box;
